Added helper restricted_alternate_login_url

--- a/ckanext/restricted/templates/package/snippets/resource_item.html
+++ b/ckanext/restricted/templates/package/snippets/resource_item.html
@@ -26,8 +26,13 @@
     {% else %}
   <div class="dropdown btn-group restricted-link">
     <i class="fa fa-icon fa-user"></i>
-      {% block resource_item_unauthorized %}
-    <a href="{{ h.url_for(controller='user', action='login', came_from='/dataset/'+pkg.name) }}" >{{ _('Log in') }}</a> {{ _('or') }} <a href="{{ h.url_for(controller='user', action='register') }}" >{{ _('Register')}}</a> {{ _('to access resource')}}
+      {% block resource_item_unauthorized %}{% if h.restricted_alternate_login_url() %}
+      <a href="{{ h.restricted_alternate_login_url() }}" >{% else %}
+      <a href="{{ h.url_for(controller='user', action='login', came_from='/dataset/'+pkg.name) }}">{% endif %}
+        {{ _('Log in') }}
+      </a> {{ _('or') }} <a href="{{ h.url_for(controller='user', action='register') }}">
+        {{ _('Register') }}
+      </a> {{ _('to access resource') }}
       {% endblock %}
   </div>
     {% endif%}
